# nozzle-analysis

./: README.md  pyproject.toml
examples/dev/: generate_synthetic_case.py
examples/lynx/: LAUNCH.md  campaign.json  cases.tsv  input_template.py  optimizer.json  run_mna_case_analysis_lynx.sh  run_mna_case_cycle_lynx.sh  run_mna_iteration_array_lynx.sh  run_warpx_mna_case_lynx.sh  submit_mna_smoke_lynx.sh
src/mna_nozzle_analysis/: __init__.py  analysis.py  animation.py  carbon.py  cli.py  csvio.py  fields.py  geometry.py  plots.py  synthetic.py
tests/: test_carbon.py  test_contracts.py  test_end_to_end.py  test_fields.py  test_geometry.py  test_lynx_campaign_animation.py
